--- a/BroCode - HTML & CSS Full Course for free (2023)/33a_image_gallery.css
+++ b/BroCode - HTML & CSS Full Course for free (2023)/33a_image_gallery.css
@@ -8,7 +8,8 @@ body {
   border: 1px solid rgb(255, 255, 255);
   margin: 5px;
 
-  width: 200px;
+  /* width: 200px; */
+  
 }
 
 .gallery .description {
@@ -21,6 +22,12 @@ body {
 }
 
 .gallery img {
-  width: 100%;
-  height: auto;
+  /* width: 100%; */
+  /* height: auto; */
+
+  width: 200px;
+  height: 200px;
+
+  /* zoom in the image to fit the box */
+  object-fit: cover;
 }
